# family-tree-api

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20231024_001923_init_accounts.py
family/: application.py  settings.py
family/adapters/db/: __init__.py  database.py  mappers.py
family/adapters/db/crud/: __init__.py  account.py  base.py  health.py  person.py
family/adapters/db/models/: __init__.py  accounts.py  base.py  family.py  link.py  person.py
family/adapters/db/queries/: direct_hierarchy.py
family/adapters/schemas/: accounts.py  base.py  logging_schema.py  persons.py  token.py
family/api/: dependencies.py  errors.py
family/api/v1/: healthcheck.py  login.py  person.py  root.py  router.py
family/core/: log_settings.py
family/core/midlewares/: __init__.py  log_mdlw.py
family/resources/: role_map.py  timezones.py
family/services/accounts/: __init__.py  service.py  uow.py
family/services/base/: __init__.py  service.py  uow.py
family/services/health/: __init__.py  service.py  uow.py
family/services/persons/: __init__.py  service.py  uow.py
family/utils/: container.py  password.py
family/utils/gedcom/: __init__.py  individual.py  parser.py  standart.py  tag.py
tests/: conftest.py  fake_const.py  fake_data.py  test_api.py
