[tool.ruff]
select = ["ALL"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "migrations",
    "dist",
    "node_modules",
    "venv",
    "sss.py"
]
ignore = [
    "ANN",      # Type hints related, let mypy handle these.
    "COM812",   # "Trailing comma missing". If black is happy, I'm happy.
    "D",        # Docstrings related
    "E501",     # "Line too long". If black is happy, I'm happy.
    "EM101",    # "Exception must not use a string literal, assign to variable first"
    "EM102",    # "Exception must not use an f-string literal, assign to variable first"
    "PTH",      # User Pathlib stuff over os.*. Should migrate to Pathlib at some point.
    "RET504",   # "Unnecessary variable assignment before `return` statement"
    "S101",     # "Use of `assert` detected"
    "SIM108",   # "Use ternary operator ...". Ternary is harmful for readability in some cases.
    "TRY003",   # "Avoid specifying long messages outside the exception class"
    "RUF001",
    "RUF002",
    "RUF003",
    "G004",     # Logging statement uses f-string
    "N805",     # First argument of a method should be named `self`
    "FA102",    # Missing `from __future__ import annotations`, but uses PEP 585 collection
    ]
line-length = 120
target-version = "py37"

[tool.ruff.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
env_files = [".env"]
addopts = '''
  --strict-markers
  --tb=short
  --asyncio-mode=auto
  --disable-warnings
'''

[project]
# Support Python 3.10+.
requires-python = ">=3.10"

[tool.ruff.per-file-ignores]
"family/adapters/db/models/__init__.py" = ["F401", "F403"]
"plgr.py" = ["T203"]
"plgr*" = ["T203", "T201"]

[tool.ruff.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Body", "fastapi.File"]

[tool.autoimport.common_statements]
# standart
"UUID" = "from uuid import UUID"
"uuid4" = "fomr uuid import uuid4"
"timedelta" = "from datetime import timedelta"
"pprint" = "from pprint import pprint"

# installed libs
"logging" = "from loguru import logger as logging"

"validator" = "from pydantic import validator"
"root_validator" = "from pydantic import root_validator"
"parse_obj_as" = "from pydantic import parse_obj_as"

"APIRouter" = "from fastapi import APIRouter"
"Depends"= "from fastapi import Depends"

"select" = "from sqlalchemy import select"
"update" = "from sqlalchemy import update"
"contains_eager" = "from sqlalchemy.orm import contains_eager"
"selectinload" = "from sqlalchemy.orm import selectinload"
"func" = "from sqlalchemy import func"
"AsyncSession" = "from sqlalchemy.ext.asyncio import AsyncSession"
"Mapped" = "from sqlalchemy.orm import Mapped"
"mapped_column" = "from sqlalchemy.orm import mapped_column"
"relationship" = "from sqlalchemy.orm import relationship"
"ForeignKey" = "from sqlalchemy import ForeignKey"
"PrimaryKeyConstraint" = "from sqlalchemy import PrimaryKeyConstraint"
"UniqueConstraint" = "from sqlalchemy import UniqueConstraint"
"String" = "from sqlalchemy import String"

# project libs
"BaseSchema" = "from family.adapters.schemas.base import BaseSchema"
"BaseService" = "from family.services.base import BaseService"
"BaseUOW" = "from family.services.base import BaseUOW"
"BaseCRUD" = "from family.adapters.db.crud.base import BaseCRUD"
"AccountDBSchema" = "from family.adapters.schemas.accounts import AccountDBSchema"
"AccountModel" = "from family.adapters.db.models import AccountModel"
"Container" = "from family.utils.container import Container"
"BaseTable" = "from family.adapters.db.models.base import BaseTable"
"Base" = "from family.adapters.db.models.base import Base"
"PersonCRUD" = "from family.adapters.db.crud import PersonCRUD"
"PersonDBSchema" = "from family.adapters.schemas.persons import PersonDBSchema"
"PersonService" = "from family.services.persons import PersonService"
"PersonModel" = "from family.adapters.db.models import PersonModel"
"FamilyModel" = "from family.adapters.db.models import FamilyModel"

[tool.isort]
known_first_party = ["family"]
profile = "black"
known_local_folder = ["family"]
skip = ["migrations/env.py"]
